unpackaged/main/default/objects/Onboarding_Service_Territories__c/Onboarding_Service_Territories__c.object-meta.xml
<CustomObject>
    <label>Onboarding Service Territories</label>
    <nameField>
        <displayFormat>OBSTM-{00000000}</displayFormat>
        <label>Onboarding STM</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Service Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>