unpackaged/main/default/objects/Onboarding_Service_Territories__c/fields/EffectiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveStartDate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>