unpackaged/main/default/objects/Onboarding_Service_Territories__c/fields/Operating_Hours__c.field-meta.xml
<CustomField>
    <fullName>Operating_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operating Hours</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>OperatingHours.Name</field>
            <operation>contains</operation>
            <value>NO SHIFT</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OperatingHours</referenceTo>
    <relationshipLabel>Onboarding Service Territories</relationshipLabel>
    <relationshipName>Onboarding_Service_Territories</relationshipName>
    <type>Lookup</type>
</CustomField>