unpackaged/main/default/objects/Onboarding_Service_Territories__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Territory</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ServiceTerritory.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>ServiceTerritory.ParentTerritoryId</field>
            <operation>notEqual</operation>
            <value />
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Onboarding Service Territories</relationshipLabel>
    <relationshipName>Onboarding_Service_Territories</relationshipName>
    <type>Lookup</type>
</CustomField>