unpackaged/main/default/objects/Onboarding_Service_Territories__c/fields/Territory_Type__c.field-meta.xml
<CustomField>
    <fullName>Territory_Type__c</fullName>
    <defaultValue>&quot;Secondary&quot;</defaultValue>
    <label>Territory Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Relocatoin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>